--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,15 +1,37 @@
-global: # Default is every 1 minute.   
-   scrape_configs:  
-  # server prometheus listens on TCP/9090  
-  - job_name: 'prometheus'.  
-         # metrics_path defaults to "/metrics  
-         # scheme defaults to "http".  
-      static_configs:  
-        - targets: ['localhost:9090']
+# my global config
+global:
+   scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+   evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
+   # scrape_timeout is set to the global default (10s).
  
-  # Exporters: client servers  
-  - job_name: 'nodes'.  
-     scrape_interval: 1m # Override the default global interval for this job  
-     scrape_timeout: 10s # Override the default global timeout for this job  
-     static_configs:  
-     - targets: [' localhost:9100']
+ # Alertmanager configuration
+ alerting:
+   alertmanagers:
+   - static_configs:
+     - targets:
+       # - alertmanager:9093
+ 
+ # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
+ rule_files:
+   # - "first_rules.yml"
+   # - "second_rules.yml"
+ 
+ # A scrape configuration containing exactly one endpoint to scrape:
+ # Here it's Prometheus itself.
+ scrape_configs:
+   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
+   - job_name: 'prometheus'
+ 
+     # metrics_path defaults to '/metrics'
+     # scheme defaults to 'http'.
+ 
+     static_configs:
+     - targets: ['localhost:9090']
+
+   - job_name: 'nodes'
+ 
+     # metrics_path defaults to '/metrics'
+     # scheme defaults to 'http'.
+ 
+     static_configs:
+     - targets: ['localhost:9101']
